--- a/packages/run-length-encoding/package.json
+++ b/packages/run-length-encoding/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "1_leap-year",
+    "name": "run-length-encoding",
     "version": "1.0.0",
     "description": "Given a year, report if it is a leap year.",
     "main": "index.js",
